Fixed reading list spacing and added nav bar transitions

--- a/2.0/login.css
+++ b/2.0/login.css
@@ -16,61 +16,6 @@ body {
     justify-content: center;
   }
 
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    padding: 20px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 99;
-    background-color: rgb(7, 70, 33);
-    margin-bottom:100px;
-}
-
-.container{
-    padding-top: 100px;
-    height: 100vh;
-    display: flex;
-    background-size:  cover;
-    background-position: center;
-    background-attachment: fixed;
-    align-items: center;
-    justify-content: center;
-}
-
-.title {
-    color: blanchedalmond;
-}
-.navigation a{
-    position: relative;
-    font-size: 1.1em;
-    color:blanchedalmond;
-    text-decoration: wavy;
-    font-weight: 500;
-    margin-left: 50px;
-  }
-  
-  .navigation a::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background-color:blanchedalmond;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: tranform 0.5s;
-  }
-  
-  .navigation a:hover::after {
-    transform: scaleX(1);
-  }
-
 .form{
     position: relative;
     padding: 40px 30px;
